Favicon + style + tweak + load more scripts

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>mattbornify</title>
+    <link rel="shortcut icon" href="/ify/favicon.ico">
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <p>Drag this bookmarklet to your favorites bar and run it on your site.</p>
-    <a class="bookmarklet" href="javascript:(()=>{s=document.createElement('script');s.src=`https://raw.githack.com/mattborn/ify/main/ify.js?v=${Date.now()}`;document.body.appendChild(s)})()">mattbornify</a>
-    <a class="bookmarklet" href="javascript:(()=>{s=document.createElement('script');s.src=`http://localhost:2046/ify.js?v=${Date.now()}`;document.body.appendChild(s)})()">localdev</a>
+    <a class="bookmarklet" href="javascript:(()=>{z=document.getElementsByTagName('script')[0];s=document.createElement('script');s.src=`https://rawcdn.githack.com/mattborn/ify/main/ify.js?v=${Date.now()}`;z.parentNode.insertBefore(s,z)})()">✨ mattbornify</a>
   </body>
 </html>
